exports[`test Snapshot for <Button /> should match 1`] = `
<a
  className="btn-start"
  onClick={undefined}>
  Text
</a>
`;

exports[`test Snapshot for <Button /> with link should match 1`] = `
<a
  className="btn-start"
  onClick={[Function]}
  style={Object {}}>
  Text
</a>
`;
